k8s/db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-ihm
  namespace: motower-ihm
spec:
  serviceName: postgres
  replicas: 1  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14  # Use the desired PostgreSQL version
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-persistent-storage
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      # storageClassName: your-storage-class  # Specify your storage class
      resources:
        requests:
          storage: 10Gi  # Adjust the storage size as needed
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: postgres
