k8s/front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: oci-ihm
  name: ihm-front
  labels:
    app: ihm-front
spec:
  selector:
    matchLabels:
      app: ihm-front
  template:
    metadata:
      labels:
        app: ihm-front
    spec:
      containers:
        - name: ihm-front
          image: almoustapha/gps-oci-api:oci
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: oci-ihm
  name: ihm-front-svc
spec:
  selector:
    app: ihm-front
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: oci-ihm
  name: ihm-front-ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
    nginx.ingress.kubernetes.io/proxy-buffer-size: 256k
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  ingressClassName: nginx
  rules:
    - host: 10.242.36.138.sslip.io
      http:
        paths:
          - backend:
              service:
                name: ihm-front-svc
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
